syntax = "proto3";

option go_package = "edm-entities-approval-rules-presentation-abstractions-internals";

package Edm.Entities.Approval.Rules.Presentation.Abstractions.Internals;

option csharp_namespace = "Edm.Entities.Approval.Rules.Presentation.Abstractions.Internals";

import "Grpc/Contracts/Rules/Keys/approval_rule_key.proto";

message DeactivateApprovalRulesCommand {
  ApprovalRuleKeyDto key = 1;
  string comment = 2;
  string current_user_id = 3;
  string concurrency_token = 4;
}

message DeactivateApprovalRulesCommandResponse {
}
